<resources>
    <string name="app_name">Nustfruita</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="appBrand">NustFruita</string>
    <string name="profile_icon_description">An image of a person</string>
    <string name="username">Username</string>
    <string name="plusbutton">plus button</string>
    <string name="phone_icon_description">An icon of a phone</string>
    <string name="phone">Phone</string>
    <string name="email_icon_description">An icon of an email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_icon_description">An icon of the letters ABC</string>
    <string name="input_field_width">200dp</string>
    <string name="full_name">Full Name</string>
    <string name="minus_button">minus button</string>
    <string name="productDB">Product</string>
    <string name="_1">1</string>
    <string name="rs_price">Rs Price</string>
    <string name="banana">banana</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="house_icon_description">An icon of a house</string>
    <string name="hostel">Hostel</string>
    <string name="sign_in">Sign In</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="apple_icon_description">Image of an Apple with number 1 on top.</string>
    <string name="phone_num_prompt">Enter Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="phoneNumberPlaceHolder">XXX XXXXXXX</string>
    <string name="pearIconDescription">Image of a pear with number 2 on top</string>
    <string name="phoneIconDescription">Image of a Phone</string>
    <string name="otp_prompt">Enter 6 digit OTP</string>
    <string name="otp_placeholder">XXXXXX</string>
    <string name="verify">Verify</string>
    <string name="resend_otp_prompt">Resend OTP in 30 seconds</string>

    <string name="order_id">Order ID:</string>
    <string name="order_date">Order Date:</string>
    <string name="estimated_arrival">Estimated Arrival:</string>
    <string name="order_status_pending">Your order is pending confirmation!</string>
    <string name="order_status_confirmed">Your order has been confirmed!</string>
    <string name="order_status_packing">Your order is being packed!</string>
    <string name="order_status_on_way">Your order is on the way!</string>
    <string name="order_status_delivered">Your order has been delivered!</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="packing">Packing</string>
    <string name="on_way">On The Way</string>
    <string name="delivered">Delivered</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery">Delivery:</string>
    <string name="total">Total</string>
    <string name="delivery_fees">99</string>
    <string name="error">Error</string>

    <string name="complete_profile_prompt">Complete Your Profile</string>
    <string name="credential_icon_description">Icon of a credential card.</string>
    <string name="room">Room</string>
    <string name="room_number_description">An icon of the numbers 123</string>
    <string name="hostel_field_prompt">Select Hostel</string>
    <string name="skip_profile_completion_prompt">Skip for Now</string>
    <string name="pkr_0">PKR 0</string>
    <string name="checkout">Checkout</string>
    <string name="pkr_50">PKR 50</string>
    <string name="item_1">Item 1</string>
    <string name="minus_button_description">minus button description</string>
    <string name="quot_plus_button_description_quot">\"plus button description\"</string>
    <string name="item_card_description">item card description</string>
    <string name="add_delivery_instructions">Add Delivery Instructions (Optional)</string>
    <string name="rs_50">Rs. 50</string>

    <string name="sample_fact">Grapes explode if you put them in the microwave.</string>

    <string name="fruitfact">FruitFact</string>

    <string name="back_to_menu">Back to menu</string>
    <string name="company_name">NustFruita</string>
    <string name="my_orders">My Orders</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="logout_icon_description">Logout icon</string>
    <string name="information_icon_description">Information icon</string>
    <string name="list_icon_description">A bullet point list icon</string>
    <string name="company_logo_description">company logo</string>
    <string name="edit_your_profile_prompt">Edit Your Profile</string>
    <string name="unit_price">Unit Price</string>
    <string name="add_new_product">NEW PRODUCT</string>
    <string name="cherry_icon">cherry icon</string>
    <string name="product_name">Product Name</string>
    <string name="select_image">Select Image</string>
    <string name="product_category">Product Category</string>
    <string name="product_unit">Product Unit</string>
    <string name="category">Category</string>

    <string name="product_name_placeholder">Product</string>
    <string name="product_price_placeholder">Rs 000</string>
    <string name="add_to_cart">Add</string>

    <string name="id_label">Order #</string>
    <string name="total_label">Total:</string>
    <string name="items_label">Items:</string>
    <string name="ordered_on">Ordered on</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="delivery_fees_pkr">PKR 99</string>
    <string name="placeholder_unit">unit</string>
    <string name="add_product">Add Product</string>
    <string name="manage_orders">Manage Orders</string>

    <string name="ahmed">Ahmed Afzal</string>
    <string name="sabih">Muhammad Sabih Ali</string>
    <string name="tayyab">Tayyab Bin Kashif</string>
    <string name="about_us_text">We\'re a group of software engineering students passionate for developing innovative solutions in the realm of android development (ty chatGPT). Our team comprises of:</string>
    <string name="about_tayyab">The guy who literally made the entire app (debatable), chronically sleep deprived.</string>
    <string name="about_sabih">Max Verstappen\'s third wife and F1 enthusiast.</string>
    <string name="about_ahmed">The princess of the group, strict feminist.</string>

    <string name="phone_label">Phone:</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>

    <string name="unit">Unit</string>
    <string name="your_basket">Your Basket</string>
    <string name="icon_of_a_fruit">Icon of a Fruit</string>
    <string name="no_orders">No orders</string>
    <string name="all_orders">All orders</string>

    <string name="empty_basket">Your basket is empty</string>

    <string name="continue_as_guest">Continue as Guest</string>
    <string name="you_need_to_login_first">You need to login first.</string>
    <string name="go_back">Go Back</string>
    <string name="log_in">Login</string>
    <string name="login_icon_description">Login icon</string>



</resources>