<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    >

    <LinearLayout
        android:id="@+id/optionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profileRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/profile_icon"
                app:tint="@color/secondary_color"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/profile_icon_description"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="20dp"

                android:textStyle="bold"
                android:textSize="30sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/orderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/order_list_icon"
                app:tint="@color/secondary_color"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/list_icon_description"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_orders"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="20dp"

                android:textStyle="bold"
                android:textSize="30sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/aboutRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/info_icon"
                app:tint="@color/secondary_color"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/information_icon_description"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="20dp"

                android:textStyle="bold"
                android:textSize="30sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/logoutRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/logout_icon"
                app:tint="@color/secondary_color"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/logout_icon_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="20dp"

                android:textStyle="bold"
                android:textSize="30sp"/>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/loginRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/login_icon"
                app:tint="@color/secondary_color"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/login_icon_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/secondary_color"
                android:layout_marginStart="20dp"

                android:textStyle="bold"
                android:textSize="30sp"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/company_logo_description"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="-20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>