<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginOTPActivity">

    <LinearLayout
        android:id="@+id/fruitArray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/apple_icon_description"
                app:srcCompat="@drawable/fruit_apple"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/num1"
                android:textSize="30sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/pearIconDescription"
                app:srcCompat="@drawable/fruit_pear"
                app:tint="@color/pear_green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/num2"
                android:textSize="30sp"
                android:textColor="@color/white"/>

        </RelativeLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/password_icon_description"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/password_icon"

        app:tint="@color/primary_color" />

    <TextView
        android:id="@+id/otpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/otp_prompt"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/otpCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/primary_light"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpPrompt">

        <RelativeLayout

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp">

            <EditText
                android:id="@+id/otpField"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:autofillHints="smsOTPCode"
                android:backgroundTint="@color/primary_light"
                android:ems="10"
                android:hint="@string/otp_placeholder"
                android:inputType="numberPassword"
                android:layout_centerInParent="true"
                android:importantForAutofill="yes"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"/>


        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/verifyOTPBtn"
        style="@style/AuthButtonStyle"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpCard"
        android:layout_marginTop="30dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5
" />

    <TextView
        android:id="@+id/resendText"
        android:text="@string/resend_otp_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyOTPBtn"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>